# BayesianOptimization

./: .buildinfo  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  README  README.html  README.md  acquisition_functions.html  advanced-tour.html  basic-tour.html  bayes_opt.py  code_docs.html  constraints.html  domain_reduction.html  examples.html  exploitation vs exploration.ipynb  exploitation_vs_exploration.html  genindex.html  help_functions.py  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  pyrightconfig.json  pytest.ini  quickstart.html  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  sklearn_example.py  versions.json  (+2 more)
.github/: generate_paper.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_docs.yml  check_docstrings.yml  format_and_lint.yml  python-app.yml  python-publish.yml  run_tests.yml
1.5.1/: .buildinfo  advanced-tour.html  advanced-tour.ipynb  basic-tour.html  constraints.html  domain_reduction.html  examples.html  exploitation_vs_exploration.html  exploitation_vs_exploration.ipynb  genindex.html  index.html  objects.inv  searchindex.js  sitemap.xml  visualization.html
1.5.1/_sources/: basic-tour.ipynb.txt  examples.rst.txt  index.rst.txt
1.5.1/_static/: sphinx_immaterial_theme.f9d9eeeb247ace16c.min.js
1.5.1/reference/: acquisition.html  (+5 more)
2.0.0/: basic-tour.html
2.0.1/: advanced-tour.html  visualization.html
2.0.2/: advanced-tour.ipynb  domain_reduction.html
2.0.3/: .buildinfo  index.html
2.0.4/: acquisition_functions.html  advanced-tour.html  basic-tour.html  constraints.html  domain_reduction.html  exploitation_vs_exploration.html  genindex.html  index.html  py-modindex.html  searchindex.js  visualization.html
3.0.0/: .buildinfo  acquisition_functions.html  index.html
3.0.1/: acquisition_functions.html  genindex.html
3.1.0/: acquisition_functions.html  basic-tour.html  domain_reduction.html  exploitation_vs_exploration.html  genindex.html  index.html  parameter_types.html
3.2.0/: .buildinfo  constraints.html  exploitation_vs_exploration.html  searchindex.js  visualization.html
3.2.1/: acquisition_functions.html  basic-tour.html  constraints.html  domain_reduction.html  parameter_types.html  parameter_types.ipynb  py-modindex.html  visualization.html
3.2.2/: acquisition_functions.ipynb  advanced-tour.html
3.3.0/: .buildinfo  exploitation_vs_exploration.html  searchindex.js
_sources/: README.md.txt  examples.rst.txt  index.rst.txt
bayes_opt/: GP.py  __init__.py  acquisition.py  bayes_opt.py  bayes_opt_old.py  bayesian_optimization.py  bayesian_optimization.py.bak  constraint.py  db_manager.py  domain_reduction.py  event.py  exception.py  helpers.py  helpers.py.bak  logger.py  observer.py  parameter.py  target_space.py  util.py
docsrc/: Makefile  code_docs.rst  conf.py  constraints.ipynb  domain_reduction.ipynb  examples.rst  index.rst  make.bat  quickstart.rst  requirements.txt  visualization.ipynb
doctrees/: README.doctree  acquisition_functions.doctree  advanced-tour.doctree  basic-tour.doctree  code_docs.doctree  constraints.doctree  domain_reduction.doctree  environment.pickle  examples.doctree  exploitation_vs_exploration.doctree  index.doctree  quickstart.doctree  visualization.doctree
examples/: 2d_function.ipynb  __init__ .py  acquisition function optimization.ipynb  acquisition_functions.ipynb  advanced-tour.ipynb  async_optimization.py  async_optimization_believe.py  async_optimization_dummies.py  async_optimization_using_asyncio.py  basic-tour.ipynb  bo_parameterTyping_example.py  constraints.ipynb  database_interactions.ipynb  domain_reduction.ipynb  duplicate_point.py  exploitation vs exploration.ipynb  exploitation_vs_exploration.ipynb  optimizer_state.json  parameter_types.ipynb  plot_acq_func_examples.ipynb  plot_gp_function.py  sklearn_example.py  test.py  typed_hyperparameter_tuning.py  usage.py  usage.py.bak  visualization.ipynb  visualization.py  xgb_example.py  xgboost_example.py
html/: .buildinfo  README.html  acquisition_functions.html  advanced-tour.html  basic-tour.html  code_docs.html  constraints.html  domain_reduction.html  examples.html  exploitation_vs_exploration.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  searchindex.js  visualization.html
master/: .buildinfo  acquisition_functions.html  advanced-tour.html  advanced-tour.ipynb  basic-tour.html  code_docs.html  constraints.html  constraints.ipynb  domain_reduction.html  examples.html  exploitation_vs_exploration.html  genindex.html  index.html  objects.inv  parameter_types.html  py-modindex.html  searchindex.js  sitemap.xml  visualization.html
scratch/: print_function.ipynb
scripts/: check.sh  check_precommit.sh  format.sh
tests/: target_space.db  test_acceptance.py  test_acquisition.py  test_bayesian_optimization.py  test_constraint.py  test_convergence.py  test_db_manager.py  test_dummy.py  test_helper_functions.py  test_integration.py  test_logger.py  test_logs.json  test_logs_constrained.json  test_logs_duplicates.json  test_notebooks_run.py  test_observer.py  test_parameter.py  test_queue.py  test_seq_domain_red.py  test_target_space.py  test_util.py  tests_helper_functions.py
(+98 files in other folders)
