[project]
name = "bayesian-optimization"
version = "3.0.1"
description = "Bayesian Optimization package"
authors = [{ name = "Fernando Nogueira", email = "fmfnogueira@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scikit-learn>=1.0.0,<2.0.0",
    "numpy>=1.25; python_version<'3.13'",
    "numpy>=2.1.3; python_version>='3.13'",
    "scipy>=1.0.0,<2.0.0; python_version<'3.13'",
    "scipy>=1.14.1,<2.0.0; python_version>='3.13'",
    "colorama>=0.4.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<5.0",
    "coverage>=7.4.1,<8.0",
    "ruff==0.6.6",
    "pre-commit>=3.7.1,<4.0",
]
nbtools = [
    "nbformat>=5.9.2,<6.0",
    "nbconvert>=7.14.2,<8.0",
    "jupyter>=1.0.0,<2.0",
    "matplotlib>=3.0,<4.0",
    "nbsphinx>=0.9.4,<1.0",
    "sphinx-immaterial>=0.12.0,<1.0",
    "sphinx>=7.0.0,<8.0; python_version<'3.10'",
    "sphinx>=8.0.0,<9.0; python_version>='3.10'",
    "sphinx-autodoc-typehints>=2.3.0,<3.0; python_version<'3.10'",
    "sphinx-autodoc-typehints>=2.4.0,<3.0; python_version>='3.10'",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "bayes_opt" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
